# warp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Cross.toml  EULA.md  LICENSE  README.md  install-completions.sh  test_cache.rs
.claude/agents/: api-integration-specialist.md  config-security-manager.md  korean-law-api-spec-researcher.md  output-formatter.md  performance-reliability-optimizer.md  qa-coverage-engineer.md
.github/workflows/: audit.yml  ci.yml  docs.yml  release.yml
benches/: api_performance.rs  enhanced_performance.rs
completions/: _warp  _warp.ps1  warp.bash  warp.fish
docs/: README.md
docs/ko/: README.md  examples.md  faq.md  installation.md  troubleshooting.md  user-guide.md
examples/: README.md  api_usage.rs  cache_usage.rs
internal/api/: client_extended_test.go
internal/cmd/: admrule_test.go  interpretation_test.go  precedent_test.go  search_test.go  test_helpers.go
internal/output/: formatter_extended_test.go  table_writer.go
internal/testutil/: mock_server.go
locales/: en.yml  ko.yml
scripts/: headver.sh
src/: error.rs  error_test.rs  lib.rs  main.rs  metrics.rs  progress.rs
src/api/: admrul.rs  batcher.rs  client.rs  deserializers.rs  elis.rs  expc.rs  http_client.rs  mod.rs  nlic.rs  parallel.rs  pool.rs  prec.rs  streaming.rs  types.rs
src/cache/: key.rs  mod.rs  storage.rs  tiered.rs
src/cli/: args.rs  mod.rs  shell_detect.rs
src/cli/args/: cache.rs
src/cli/commands/: admrule.rs  cache.rs  config.rs  filter.rs  help.rs  interpretation.rs  law.rs  metrics.rs  mod.rs  ordinance.rs  parallel_search.rs  precedent.rs  search.rs  version.rs
src/config/: mod.rs
src/metrics/: collector.rs  dashboard.rs  mod.rs  storage.rs
src/output/: formatter.rs  mod.rs
tests/: api_parsing_test.rs  integration_test.rs  pagination_test.rs
