[package]
name = "warp"
version = "0.1.0"
edition = "2021"
authors = ["PyHub Community"]
description = "Korean Legal Information CLI - Search laws, ordinances, and legal documents from the terminal"
license = "MIT"
repository = "https://github.com/pyhub-apps/warp"
keywords = ["cli", "legal", "korea", "law", "search"]
categories = ["command-line-utilities"]

[lib]
name = "warp"
path = "src/lib.rs"

[[bin]]
name = "warp"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.5"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP & API
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"  # Keep for migration from old configs
toml = "0.8"
url = "2.5"

# Configuration
config = { version = "0.14", features = ["yaml"] }
dirs = "5.0"

# Output Formatting
comfy-table = "7.1"
colored = "2.1"
termion = "4.0"
csv = "1.3"
indicatif = "0.17"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Internationalization
rust-i18n = "3.1"
sys-locale = "0.3"
once_cell = "1.20"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"

# Embedded Resources
include_dir = { version = "0.7", features = ["glob"] }

[dev-dependencies]
mockito = "1.5"
tempfile = "3.12"
serial_test = "3.1"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
