[[bench]]
harness = false
name = "api_performance"

[[bin]]
name = "warp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
# Utilities
chrono = {version = "0.4", features = ["serde"]}
# CLI Framework
clap = {version = "4.5", features = ["derive", "env", "unicode", "wrap_help"]}
clap_complete = "4.5"
colored = "2.1"
# Output Formatting
comfy-table = "=7.1.1"
# Configuration
config = {version = "0.14", features = ["yaml"]}
csv = "1.3"
dirs = "5.0"
env_logger = "0.11"
futures = "0.3"
# Embedded Resources
include_dir = {version = "0.7", features = ["glob"]}
indicatif = "0.17"
log = "0.4"
once_cell = "1.20"
regex = "1.11"
# HTTP & API
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "http2"]}
# Cache & Database
rusqlite = {version = "0.31", features = ["bundled", "chrono"]}
# Internationalization
rust-i18n = "3.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"  # Keep for migration from old configs
sha2 = "0.10"
sys-locale = "0.3"
# Error Handling
thiserror = "1.0"
# Async Runtime
tokio = {version = "1.40", features = ["full"]}
toml = "0.8"
url = "2.5"

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}
mockito = "1.5"
pretty_assertions = "1.4"
serial_test = "3.1"
tempfile = "3.12"
tokio-test = "0.4"

[lib]
name = "warp"
path = "src/lib.rs"

[package]
authors = ["PyHub Community"]
categories = ["command-line-utilities"]
description = "Korean Legal Information CLI - Search laws, ordinances, and legal documents from the terminal"
edition = "2021"
keywords = ["cli", "legal", "korea", "law", "search"]
license = "MIT"
name = "warp"
repository = "https://github.com/pyhub-apps/warp"
version = "2.2536.25"

# Profile for benchmarks with debug info
[profile.bench]
debug = true
inherits = "release"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
